--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.0+2
   flutter_bloc: ^0.21.0
   carousel_slider: ^3.0.0
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
