--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -26,13 +26,16 @@ dependencies:
   http: ^0.12.0+2
   flutter_bloc: ^0.21.0
   carousel_slider: ^3.0.0
-  shared_preferences:
-  sqflite:
-  path_provider:
+  hive: ^1.4.1+1
+  hive_flutter: ^0.3.0+2
+  path_provider: ^1.6.11
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  #added dependencies
+  hive_generator: ^0.8.1
+  build_runner: ^1.10.0
 
 
 # For information on the generic Dart part of this file, see the
