--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
   path_provider: ^1.6.11
+  flutter_rating_bar: ^3.1.0
 
 dev_dependencies:
   flutter_test:
